force-app/main/default/objects/Calendar_Build_Log_Manual_Run__c/Calendar_Build_Log_Manual_Run__c.object-meta.xml
<CustomObject>
    <description>Captures CB stats for manual run</description>
    <label>Calendar Build Log Manual Run</label>
    <nameField>
        <label>Calendar Build Log Manual Run</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Calendar Build Log Manual Run</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>