force-app/main/default/objects/Calendar_Build_Log_Manual_Run__c/fields/CB_Mobile_Opportunities_Failure_Count__c.field-meta.xml
<CustomField>
    <fullName>CB_Mobile_Opportunities_Failure_Count__c</fullName>
    <label>CB Mobile Opportunities Failure Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>