force-app/main/default/objects/Calendar_Build_Log_Manual_Run__c/fields/Drive_Date__c.field-meta.xml
<CustomField>
    <fullName>Drive_Date__c</fullName>
    <formula>Parent_Calendar_Build_Log__r.Drive_Date__c</formula>
    <label>Drive Date</label>
    <type>Date</type>
</CustomField>