force-app/main/default/objects/Calendar_Build_Log_Manual_Run__c/fields/Drive_Gen_Batch_Execution_Date__c.field-meta.xml
<CustomField>
    <fullName>Drive_Gen_Batch_Execution_Date__c</fullName>
    <label>Drive Gen Batch Execution Date</label>
    <type>DateTime</type>
</CustomField>