force-app/main/default/objects/Calendar_Build_Log_Manual_Run__c/fields/FS_Drives_Failed_Processing__c.field-meta.xml
<CustomField>
    <fullName>FS_Drives_Failed_Processing__c</fullName>
    <label>FS Drives Failed Processing</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>