force-app/main/default/objects/Calendar_Build_Log_Manual_Run__c/fields/FS_Drives_wo_Resource_Allocation__c.field-meta.xml
<CustomField>
    <fullName>FS_Drives_wo_Resource_Allocation__c</fullName>
    <label>FS Drives w/o Resource Allocation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>