force-app/main/default/objects/Calendar_Build_Log_Manual_Run__c/fields/FS_Drives_wo_Resource_Requested__c.field-meta.xml
<CustomField>
    <fullName>FS_Drives_wo_Resource_Requested__c</fullName>
    <description>This field will captures no. of fixed site drives without any resource requested</description>
    <label>FS Drives w/o Resource Requested</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>