force-app/main/default/objects/Calendar_Build_Log_Manual_Run__c/fields/Mobile_Drive_Generation_Failure_Count__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Drive_Generation_Failure_Count__c</fullName>
    <label>Mobile Drive Generation Failure Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>