force-app/main/default/objects/Calendar_Build_Log_Manual_Run__c/fields/Parent_Calendar_Build_Log__c.field-meta.xml
<CustomField>
    <fullName>Parent_Calendar_Build_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Calendar Build Log</label>
    <referenceTo>Calendar_Build_Log__c</referenceTo>
    <relationshipLabel>Calendar Build Log Manual Run</relationshipLabel>
    <relationshipName>Calendar_Build_Log_Manual_Run</relationshipName>
    <type>Lookup</type>
</CustomField>