force-app/main/default/objects/Calendar_Build_Log_Manual_Run__c/fields/Status_Correction_Batch_Execution_Date__c.field-meta.xml
<CustomField>
    <fullName>Status_Correction_Batch_Execution_Date__c</fullName>
    <label>Status Correction Batch Execution Date</label>
    <type>DateTime</type>
</CustomField>