force-app/main/default/objects/Calendar_Build_Log_Manual_Run__c/fields/Status_Correction_Batch_Status__c.field-meta.xml
<CustomField>
    <fullName>Status_Correction_Batch_Status__c</fullName>
    <label>Status Correction Batch Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Batch_Processing_Status</valueSetName>
    </valueSet>
</CustomField>