force-app/main/default/objects/Calendar_Build_Log_Manual_Run__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status_Correction_Batch_Execution_Date__c</columns>
    <columns>Status_Correction_Batch_Drive_Count__c</columns>
    <columns>Final_State_Drive_Count__c</columns>
    <columns>Open_Drive_Count__c</columns>
    <columns>Corrected_Drive_Count__c</columns>
    <columns>Op_Record_Count__c</columns>
    <columns>Submitted_Op_Record_Count__c</columns>
    <columns>Not_Submitted_Op_Record_Count__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>