force-app/main/default/objects/Calendar_Build_Log_Manual_Run__c/listViews/CB_Manual_Run_11_1_11_30.listView-meta.xml
<ListView>
    <fullName>CB_Manual_Run_11_1_11_30</fullName>
    <columns>NAME</columns>
    <columns>Drive_Date__c</columns>
    <columns>CB_Batch_Status__c</columns>
    <columns>CB_Batch_Execution_Date__c</columns>
    <columns>CB_FS_Opportunities_Created__c</columns>
    <columns>CB_Mobile_Opportunities_Created__c</columns>
    <columns>Drive_Gen_Batch_Status__c</columns>
    <columns>Drive_Gen_Batch_Execution_Date__c</columns>
    <columns>FS_Drive_Generation_Count__c</columns>
    <columns>Mobile_Drive_Generation_Count__c</columns>
    <columns>FS_Sys_Gen_Batch_Run_Status__c</columns>
    <columns>FS_Sys_Gen_Batch_Run_Date__c</columns>
    <columns>FS_Drives_with_Resource_Allocation__c</columns>
    <columns>FS_Drives_wo_Resource_Allocation__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Drive_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>11/1/2024</value>
    </filters>
    <filters>
        <field>Drive_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>11/30/2024</value>
    </filters>
    <filters>
        <field>CB_Batch_Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </filters>
    <label>CB Manual Run 11/1_11/30</label>
</ListView>