force-app/main/default/objects/Calendar_Build_Log_Manual_Run__c/listViews/Sys_Gen_Manual_Run_11_1_11_30_25_CB.listView-meta.xml
<ListView>
    <fullName>Sys_Gen_Manual_Run_11_1_11_30_25_CB</fullName>
    <columns>NAME</columns>
    <columns>Drive_Date__c</columns>
    <columns>Mobile_Sys_Gen_Batch_Run_Status__c</columns>
    <columns>Mobile_Sys_Gen_Batch_Run_Date__c</columns>
    <columns>Mobile_Drives_with_Resource_Allocation__c</columns>
    <columns>Mobile_Drives_wo_Resource_Allocation__c</columns>
    <columns>Mobile_Drives_Failed_Processing__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Drive_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>11/2/2024</value>
    </filters>
    <filters>
        <field>Drive_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>12/1/2024</value>
    </filters>
    <filters>
        <field>Mobile_Sys_Gen_Batch_Run_Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </filters>
    <label>Sys Gen  Manual Run 11/1_11/30/25 CB</label>
</ListView>