force-app/main/default/objects/Calendar_Build_Log_Manual_Run__c/listViews/Sys_Gen_Manual_Run_8_1_8_31_2025.listView-meta.xml
<ListView>
    <fullName>Sys_Gen_Manual_Run_8_1_8_31_2025</fullName>
    <columns>NAME</columns>
    <columns>Drive_Date__c</columns>
    <columns>Mobile_Sys_Gen_Batch_Run_Status__c</columns>
    <columns>Mobile_Sys_Gen_Batch_Run_Date__c</columns>
    <columns>Mobile_Drives_with_Resource_Allocation__c</columns>
    <columns>Mobile_Drives_wo_Resource_Allocation__c</columns>
    <columns>Mobile_Drives_Failed_Processing__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Drive_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>8/2/2024</value>
    </filters>
    <filters>
        <field>Drive_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>9/1/2024</value>
    </filters>
    <filters>
        <field>Mobile_Sys_Gen_Batch_Run_Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </filters>
    <label>Sys Gen  Manual Run 8/1_8/31 CB Drives</label>
</ListView>